[gd_scene load_steps=27 format=2]

[ext_resource path="res://projectile/BaseProjectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/BaseChar.gdshader" type="Shader" id=2]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike11.png" type="Texture" id=3]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike1.png" type="Texture" id=4]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike4.png" type="Texture" id=5]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike6.png" type="Texture" id=6]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike7.png" type="Texture" id=7]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike9.png" type="Texture" id=8]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike3.png" type="Texture" id=9]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike12.png" type="Texture" id=10]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike8.png" type="Texture" id=11]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike13.png" type="Texture" id=12]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike14.png" type="Texture" id=13]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike5.png" type="Texture" id=14]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike15.png" type="Texture" id=15]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike2.png" type="Texture" id=16]
[ext_resource path="res://characters/mutant/projectiles/sprites/caustic_spike10.png" type="Texture" id=17]
[ext_resource path="res://characters/mutant/projectiles/states/CausticSpikeDefault.gd" type="Script" id=18]
[ext_resource path="res://mechanics/Hitbox.gd" type="Script" id=19]
[ext_resource path="res://sound/common/explosion4.wav" type="AudioStream" id=20]
[ext_resource path="res://characters/mutant/projectiles/CausticSpike.gd" type="Script" id=21]
[ext_resource path="res://characters/mutant/projectiles/CausticSpikeFlashEffect.tscn" type="PackedScene" id=22]
[ext_resource path="res://characters/mutant/sound/caustic3.wav" type="AudioStream" id=23]
[ext_resource path="res://characters/mutant/sound/caustic4.wav" type="AudioStream" id=24]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/use_extra_color_1 = false
shader_param/use_extra_color_2 = false
shader_param/extra_replace_color_1 = Color( 1, 0, 1, 1 )
shader_param/extra_replace_color_2 = Color( 1, 0, 1, 1 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/extra_color_1 = Color( 1, 1, 1, 1 )
shader_param/extra_color_2 = Color( 1, 1, 1, 1 )
shader_param/max_color_distance = 0.01
shader_param/super_dim = false
shader_param/use_outline = false
shader_param/outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
} ]

[node name="BaseProjectile" instance=ExtResource( 1 )]
material = SubResource( 1 )
script = ExtResource( 21 )
__meta__ = {
"_editor_description_": ""
}
air_friction = "0.25"
max_air_speed = "50"
extra_state_variables = "rotate_dir_x
rotate_dir_y
can_cancel"
has_projectile_parry_window = false
deletes_other_projectiles = false
projectile_immune = true

[node name="Sprite" parent="Flip" index="0"]
z_index = 10
frames = SubResource( 2 )
animation = "Default"

[node name="CollisionBox" parent="." index="2"]
width = 10
height = 10

[node name="Hurtbox" parent="." index="3"]
width = 10
height = 10

[node name="Default" parent="StateMachine" index="0"]
script = ExtResource( 18 )
apply_forces = true
apply_custom_x_fric = true
apply_custom_y_fric = true
custom_x_fric = "0.04"
custom_y_fric = "0.04"
anim_length = 40
endless = false
sfx = ExtResource( 23 )
sfx_tick = 0
sfx_volume = -12.0

[node name="CenterHitbox" type="Node2D" parent="StateMachine/Default" index="0"]
z_index = 1000
script = ExtResource( 19 )
width = 17
height = 17
damage = 120
hitstun_ticks = 21
combo_hitstun_ticks = 15
hitlag_ticks = 1
victim_hitlag = 10
plus_frames = 2
screenshake_amount = 8
whiff_particle = ExtResource( 22 )
whiff_sound = ExtResource( 24 )
hit_sound = ExtResource( 20 )
whiff_sound_volume = -7.0
bass_on_whiff = true
start_tick = 21
active_ticks = 6

[node name="LeftHitbox1" type="Node2D" parent="StateMachine/Default" index="1"]
z_index = 1000
script = ExtResource( 19 )
x = -35
width = 7
height = 7
damage = 120
hitstun_ticks = 21
combo_hitstun_ticks = 15
hitlag_ticks = 1
victim_hitlag = 10
plus_frames = 2
screenshake_amount = 8
whiff_sound = ExtResource( 24 )
hit_sound = ExtResource( 20 )
whiff_sound_volume = -7.0
start_tick = 21
active_ticks = 6

[node name="LeftHitbox2" type="Node2D" parent="StateMachine/Default" index="2"]
z_index = 1000
script = ExtResource( 19 )
x = -60
width = 7
height = 7
damage = 120
hitstun_ticks = 21
combo_hitstun_ticks = 15
hitlag_ticks = 1
victim_hitlag = 10
plus_frames = 2
screenshake_amount = 8
whiff_sound = ExtResource( 24 )
hit_sound = ExtResource( 20 )
whiff_sound_volume = -7.0
start_tick = 21
active_ticks = 6

[node name="LeftHitbox3" type="Node2D" parent="StateMachine/Default" index="3"]
z_index = 1000
script = ExtResource( 19 )
x = -85
width = 7
height = 7
damage = 120
hitstun_ticks = 21
combo_hitstun_ticks = 15
hitlag_ticks = 1
victim_hitlag = 10
plus_frames = 2
screenshake_amount = 8
whiff_sound = ExtResource( 24 )
hit_sound = ExtResource( 20 )
whiff_sound_volume = -7.0
start_tick = 21
active_ticks = 6

[node name="LeftHitbox4" type="Node2D" parent="StateMachine/Default" index="4"]
z_index = 1000
script = ExtResource( 19 )
x = -110
width = 7
height = 7
damage = 120
hitstun_ticks = 21
combo_hitstun_ticks = 15
hitlag_ticks = 1
victim_hitlag = 10
plus_frames = 2
screenshake_amount = 8
whiff_sound = ExtResource( 24 )
hit_sound = ExtResource( 20 )
whiff_sound_volume = -7.0
start_tick = 21
active_ticks = 6

[node name="RightHitbox1" type="Node2D" parent="StateMachine/Default" index="5"]
z_index = 1000
script = ExtResource( 19 )
x = 35
width = 7
height = 7
damage = 120
hitstun_ticks = 21
combo_hitstun_ticks = 15
hitlag_ticks = 1
victim_hitlag = 10
plus_frames = 2
screenshake_amount = 8
whiff_sound = ExtResource( 24 )
hit_sound = ExtResource( 20 )
whiff_sound_volume = -7.0
start_tick = 21
active_ticks = 6

[node name="RightHitbox2" type="Node2D" parent="StateMachine/Default" index="6"]
z_index = 1000
script = ExtResource( 19 )
x = 60
width = 7
height = 7
damage = 120
hitstun_ticks = 21
combo_hitstun_ticks = 15
hitlag_ticks = 1
victim_hitlag = 10
plus_frames = 2
screenshake_amount = 8
whiff_sound = ExtResource( 24 )
hit_sound = ExtResource( 20 )
whiff_sound_volume = -7.0
start_tick = 21
active_ticks = 6

[node name="RightHitbox3" type="Node2D" parent="StateMachine/Default" index="7"]
z_index = 1000
script = ExtResource( 19 )
x = 85
width = 7
height = 7
damage = 120
hitstun_ticks = 21
combo_hitstun_ticks = 15
hitlag_ticks = 1
victim_hitlag = 10
plus_frames = 2
screenshake_amount = 8
whiff_sound = ExtResource( 24 )
hit_sound = ExtResource( 20 )
whiff_sound_volume = -7.0
start_tick = 21
active_ticks = 6

[node name="RightHitbox4" type="Node2D" parent="StateMachine/Default" index="8"]
z_index = 1000
script = ExtResource( 19 )
x = 110
width = 7
height = 7
damage = 120
hitstun_ticks = 21
combo_hitstun_ticks = 15
hitlag_ticks = 1
victim_hitlag = 10
plus_frames = 2
screenshake_amount = 8
whiff_sound = ExtResource( 24 )
hit_sound = ExtResource( 20 )
whiff_sound_volume = -7.0
start_tick = 21
active_ticks = 6
